src/snapshots/fuzz_crash/fuzz_hang_001.txt
~~~META
description=fuzz crash
type=file
~~~SOURCE
0 (
~~~PROBLEMS
MISSING HEADER

The module header is missing.

0 (
Note: This is a parse error. Check your syntax.
SYNTAX PROBLEM

Expected ')' or ',' in this expression.

0 (
Note: This is a parse error. Check your syntax.
INVALID STATEMENT

This statement is not allowed at the top level.

0 (
Only definitions, type annotations, and imports are allowed at the top level.
~~~TOKENS
Int(1:1-1:2),OpenRound(1:3-1:4),EndOfFile(1:4-1:4),
~~~PARSE
(file (1:1-1:4)
	(malformed_header (1:1-1:2) "missing_header")
	(statements (malformed_expr (1:4-1:4) "expected_expr_close_round_or_comma")))
~~~FORMATTED

~~~CANONICALIZE
(can_ir (top_level_defs "empty"))
~~~END